configuration module done.

--- a/Attribute/templates/admin/Attribute/change_form.html
+++ b/Attribute/templates/admin/Attribute/change_form.html
@@ -109,7 +109,7 @@
                               <div class="tabs" id="optiondiv">
                                 <ul>
                                   <li><a href="#option">Option</a></li>
-                                  <li id="add" style="position: relative;margin-top:-3px;float:right;right:-5px;top:0px;"><img src="{% static 'images/add-button.png' %}" height="30x" width="30px"></li>
+                                  <li id="add" style="position: relative;margin-top:-3px;float:right;right:-5px;top:0px;"><img src="/media/images/add-button.png" height="30x" width="30px"></li>
                                 </ul>
                                 <div id="option">
                                     <table id="tbl">
@@ -210,7 +210,7 @@
                               <div class="tabs" id="optiondiv">
                                 <ul>
                                   <li><a href="#option">Option</a></li>
-                                  <li id="add" style="position: relative;margin-top:-3px;float:right;right:-5px;top:0px;"><img src="{% static 'images/add-button.png' %}" height="30x" width="30px"></li>
+                                  <li id="add" style="position: relative;margin-top:-3px;float:right;right:-5px;top:0px;"><img src="/media/images/add-button.png" height="30x" width="30px"></li>
 
                                 </ul>
                                 <div id="option">
