--- a/Theme/templates/admin/app_list.html
+++ b/Theme/templates/admin/app_list.html
@@ -117,7 +117,7 @@ transform: rotate(180deg);
     <!-- Brand Logo -->
     <div style="background-color: #4b545c;">
     <a href="#" class="brand-link">
-      <img src="{% static '/images/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="/media/images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-dark" style="color: white;">AdminLTE 3</span>
     </a>
     </div>
@@ -127,7 +127,7 @@ transform: rotate(180deg);
       
     
       <!-- Sidebar Menu -->
-        <!-- customer -->
+        
         <div class="treeview-animated">
           <ul class="treeview-animated-list mb-3">
             <!-- authentication -->
@@ -161,6 +161,7 @@ transform: rotate(180deg);
                 </li>
               </ul>
             </li>
+            
             <!-- customer -->
             <li class="treeview-animated-items">
               <a class="treeview-animated-items-header">
@@ -168,7 +169,7 @@ transform: rotate(180deg);
                 <span class="mx-4 my-4">Customer</span>
               </a>
               <ul class="nested">
-                <!-- attribute -->
+                
                 <li class="treeview-animated-items">
                   <a class="treeview-animated-items-header">
                     <i class="fa fa-plus-circle"></i>
@@ -179,7 +180,7 @@ transform: rotate(180deg);
                     </li>
                   </ul>
                 </li>
-                <!-- language -->
+                
                 <li class="treeview-animated-items">
                   <a class="treeview-animated-items-header">
                     <i class="fa fa-plus-circle"></i>
@@ -209,7 +210,7 @@ transform: rotate(180deg);
                       <div class="treeview-animated-element mx-4"><i class="fa fa-picture-o mx-2" ></i><a  href="/admin/Banner/banner" > Banner</a></div>
                     </li>
                     <li>
-                      <div class="treeview-animated-element mx-4"><img src="{% static '/images/burst.png' %}" alt="fjvfjj" height="17.16" width="17.16" class="mx-2"><a  href="/admin/Banner/bannergroup" > Banner Group</a></div>
+                      <div class="treeview-animated-element mx-4"><img src="/media/images/burst.png" alt="fjvfjj" height="17.16" width="17.16" class="mx-2"><a  href="/admin/Banner/bannergroup" > Banner Group</a></div>
                     </li>
                   </ul>
                 </li>
@@ -224,17 +225,7 @@ transform: rotate(180deg);
                     </li>
                   </ul>
                 </li>
-                <!-- banner group -->
-                <!-- <li class="treeview-animated-items">
-                  <a class="treeview-animated-items-header">
-                    <i class="fa fa-plus-circle"></i>
-                    <span class="mx-4 my-4 " data-letters="G">Group</span></a>
-                  <ul class="nested">
-                    <li>
-                      <div class="treeview-animated-element mx-4"><img src="{% static '/images/burst.png' %}" alt="fjvfjj" height="17.16" width="17.16" class="mx-2"><a  href="/admin/Banners/bannergroups" > Banner Group</a></div>
-                    </li>
-                  </ul>
-                </li> -->
+                
                 <!-- page -->
                 <li class="treeview-animated-items">
                   <a class="treeview-animated-items-header">
@@ -263,7 +254,21 @@ transform: rotate(180deg);
                     <span class="mx-4 my-4" data-letters="A">Attribute</span></a>
                   <ul class="nested">
                     <li>
-                      <div class="treeview-animated-element mx-4"><img src="{% static '/images/application.png' %}" alt="fjvfjj" height="13.72" width="16" class="mx-2"><a href="/admin/Attribute/attribute"> Attribute</a></div>
+                      <div class="treeview-animated-element mx-4"><img src="/media/images/application.png" alt="fjvfjj" height="13.72" width="16" class="mx-2"><a href="/admin/Attribute/attribute"> Attribute</a></div>
+                    </li>
+                  </ul>
+                </li>
+                <!-- configuration -->
+                <li class="treeview-animated-items">
+                  <a class="treeview-animated-items-header">
+                    <i class="fa fa-plus-circle"></i>
+                    <span class="mx-4 my-4" data-letters="C">Configuration</span></a>
+                  <ul class="nested">
+                    <li>
+                      <div class="treeview-animated-element mx-4"><i class="fa fa-cog mx-2"></i><a href="/admin/Configurations/configuration"> Configuration</a></div>
+                    </li>
+                    <li>
+                      <div class="treeview-animated-element mx-4"><img src="/media/images/three-gears-of-configuration-tools.png" alt="fjvfjj" height="13.72" width="16" class="mx-2"><a href="/admin/Configurations/configurationgroup"> Group</a></div>
                     </li>
                   </ul>
                 </li>
